# docs/swagger.json
@@ -2386,6 +2386,10 @@
                     "type": "string",
                     "example": "2026-05-08T10:30:00Z"
                 },
+                "leases": {
+                    "type": "object",
+                    "additionalProperties": true
+                },
                 "limits": {
                     "$ref": "#/definitions/github_com_StacyOs_stacyvm_internal_orchestrator.OperationalLimitsInfo"
                 },
